# ophidian

./: .gitignore  Cargo.toml  README.md  build.rs
bytecode-compiler/: Cargo.toml  build.rs
bytecode-compiler/src/: chunk.rs  compiler.rs  lib.rs  opcodes.rs
c/include/: lib.h  runtime.h
c/include/compiler/: opcode.h  runtime.h  vm.h
c/src/: lib.c  opcode.h  runtime.c  vm.c
common/: Cargo.toml
common/src/: collections.rs  stack.rs
common/src/collections/: stack.rs
common/tests/: test_collections.rs
compiler/: Cargo.toml
compiler/src/: compiler.rs  lib.rs  opcodes.rs
frontend/: Cargo.toml
frontend/src/: diagnostics.rs  lib.rs  parse.rs  semantic.rs
frontend/src/diagnostics/: diagnostics.rs  emitter.rs
frontend/src/lex/: lexer.rs  token.rs
frontend/src/parse/: ast.rs  ctors.rs  parser.rs  span.rs
frontend/src/semantic/: analyzer.rs  ctors.rs  typed.rs  typed_ast.rs  types.rs
frontend/tests/: lexer_test.rs
op/: Cargo.toml  build.rs
op/src/: bindings.rs  main.rs
spec/: opcodes.def  opcodes.toml
src/: lib.rs  main.rs  parse.rs
src/lex/: lexer.rs  token.rs
src/parse/: ast.rs  ctors.rs  parser.rs  span.rs
tools/opcode-gen/: Cargo.toml
tools/opcode-gen/src/: main.rs
tools/opcode_gen/: Cargo.toml
