[workspace]
resolver = "3"
members = [
    "bytecode-compiler", 
    "common",
    "frontend", 
    "op",
    "tools/opcode-gen"
]

[workspace.dependencies] 
owo-colors = "4.3.0"
frontend = { path = "frontend" }
bytecode-compiler = { path = "bytecode-compiler" }
common = { path = "common" }
bindgen = "0.72.1"
cc = "1.2.65"
walkdir = "2.5.0"


