[package]
name = "op"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
owo-colors = { workspace = true }
bytecode-compiler = { workspace = true }
frontend = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }
cc = { workspace = true }
walkdir = { workspace = true }


